added frontend input validation and backend input validation

--- a/frontend/css/inputs.css
+++ b/frontend/css/inputs.css
@@ -25,3 +25,12 @@ select {
 #choiceForSort.active {
   display: block;
 }
+
+#invalidInput {
+  display: none;
+}
+
+#invalidInput.active {
+  display: block;
+  color: red;
+}
